--- a/src/app/newsletter/NewsletterCard.module.css
+++ b/src/app/newsletter/NewsletterCard.module.css
@@ -8,6 +8,13 @@
   position: relative;
 }
 
+
+
+.cardLink {
+  text-decoration: none;
+  color: inherit;
+}
+
 .dateTag {
   position: absolute;
   top: 12px;
@@ -17,6 +24,7 @@
   border-radius: 20px;
   font-size: 12px;
   font-weight: bold;
+  z-index: 2;
 }
 
 .imagePlaceholder {
@@ -24,6 +32,17 @@
   height: 200px;
   background-color: #d3d3d3;
   border-radius: 10px;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+}
+
+
+.imagePlaceholder img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image covers the area properly */
+  transition: transform 0.3s ease-in-out;
+  z-index: 1; 
 }
 
 .title {
@@ -36,4 +55,11 @@
   font-size: 14px;
   color: #555;
   margin-top: 6px;
+}
+.card:hover .title,
+.card:hover .description {
+  color: #0073b1; 
+}
+.card:hover .imagePlaceholder img {
+  transform: scale(1.1);
 }
