--- a/src/app/mentors/mentors.css
+++ b/src/app/mentors/mentors.css
@@ -1,28 +1,14 @@
-.mentor-card {
-    padding: 1.5rem;
-    border: 1px solid #e5e7eb;
-    border-radius: 0.5rem;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-    background-color: white;
-    transition: background-color 0.3s;
-}
-
-.mentor-card:hover {
-    background-color: #f9fafb;
-}
-
-.mentor-image {
-    width: 4rem;
-    height: 4rem;
-    border-radius: 9999px;
-    border: 1px solid #e5e7eb;
+.group {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
 }
 
 .hover-popup {
     position: absolute;
-    left: 50%;
-    top: 100%;
-    margin-top: 0.5rem;
+    top: 50%;
+    left: 80%;
+    transform: translateY(-50%);
     width: 16rem;
     padding: 1rem;
     background-color: white;
@@ -32,7 +18,6 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s, transform 0.3s;
-    transform: translateX(-50%);
     z-index: 10;
     color: black;
 }
@@ -40,5 +25,87 @@
 .group:hover .hover-popup {
     opacity: 1;
     visibility: visible;
-    transform: translate(-50%, 0.5rem);
+}
+
+#page-container {
+    padding: 4rem 8rem 4rem 8rem;
+}
+
+.mentor-card {
+    position: relative;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    border-radius: 1rem;
+    overflow: hidden;
+    background-color: #e5e7eb;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.mentor-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.mentor-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.mentor-info {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0.5rem;
+    background: linear-gradient(
+        to top,
+        rgba(255, 255, 255, 0.75) 75%,
+        rgba(255, 255, 255, 0) 100%
+    );
+    text-align: center;
+}
+
+.mentor-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+}
+
+.mentor-container > .group:nth-child(4n) .hover-popup {
+    left: -60%;
+}
+
+@media (max-width: 1200px) {
+    .mentor-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .mentor-container > .group:nth-child(3n) .hover-popup {
+        left: -60%;
+    }
+}
+
+@media (max-width: 900px) {
+    .mentor-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .mentor-container > .group:nth-child(2n) .hover-popup {
+        left: -60%;
+    }
+}
+
+.mentor-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.mentor-name {
+    margin-top: 1.66rem;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #111827;
 }
