--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,9 +14,12 @@
   }
 }
 
-body {
+body, html {
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, 'Quicksand', sans-serif;
 }
 
