pretty much done

--- a/src/app/newsletter/Newsletter.module.css
+++ b/src/app/newsletter/Newsletter.module.css
@@ -4,7 +4,7 @@
   margin: 20px auto;
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #00b118;
+  background: linear-gradient(90deg, #468C3A, #5EC272);
   color: white;
   border: none;
   border-radius: 8px;
@@ -13,7 +13,7 @@
 }
 
 .loadMoreButton:hover {
-  background-color: #187a31;
+  background: linear-gradient(90deg, #438136, #357241);
 }
 
 .container {
@@ -53,7 +53,7 @@
   max-width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  gap: 10px;
+  gap: 30px;
   justify-content: center;
   align-items: start;
   padding: 0;
