--- a/src/app/newsletter/NewsletterCard.module.css
+++ b/src/app/newsletter/NewsletterCard.module.css
@@ -1,6 +1,6 @@
 .card {
   width: 100%;
-  max-width: 400px;
+  max-width: 420px;
   /* Adjusts card size */
   padding: 16px;
   /*background-color: #b0d0a95a;*/
@@ -20,7 +20,7 @@
 .dateTag {
   position: absolute;
   top: 30px;
-  right: 30px;
+  right: 40px;
   background-color: #686f68bd;
   padding: 8px 10px;
   border-radius: 20px;
@@ -31,8 +31,8 @@
 }
 
 .imagePlaceholder {
-  width: 360px;
-  height: 360px;
+  width: 400px;
+  height: 400px;
   background-color: #d3d3d3;
   border-radius: 10px;
   overflow: hidden;
@@ -58,10 +58,12 @@
 }
 
 .description {
-  font-size: 14px;
+  font-size: 20px;
   color: #555;
   margin-top: 6px;
   font-family: 'Quicksand', sans-serif;
+  text-align: left;
+  font-weight: normal;
 }
 
 .card:hover .title,
