--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -25,7 +25,7 @@ html, body {
   padding: 2rem;
   aspect-ratio: 1 / 1;
   width: 400px;
-  height: auto;
+  height: 100%;
 }
 
 h1.text-center, 
@@ -39,8 +39,8 @@ h2.text-center {
   padding: 2rem;
   border-radius: 10px;
   margin-top: 2rem;
-  padding-left: 8%;
-  padding-right: 8%;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 .history-section p {
   line-height: 1.6;
