--- a/src/app/newsletter/RecentNewsletterCard.module.css
+++ b/src/app/newsletter/RecentNewsletterCard.module.css
@@ -1,6 +1,7 @@
 .card {
     width: 100%;
     max-width: 500px;
+    max-height: 400px;
     padding: 16px;
     border-radius: 12px;
     text-align: center;
@@ -61,6 +62,8 @@
     font-family: 'Quicksand', sans-serif;
     text-align: left;
     font-weight: normal;
+    padding: 5px;
+    border-radius: 8px;
 }
 
 .imagePlaceholder:hover img {
