--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -21,11 +21,11 @@ html, body {
 
 .card-item {
   background-color: rgb(113, 196, 131);
-  border-radius: 32px;
+  border-radius: 10px;
   padding: 2rem;
   aspect-ratio: 1 / 1;
   width: 400px;
-  height: 100%;
+  height: auto;
 }
 
 h1.text-center, 
@@ -39,8 +39,8 @@ h2.text-center {
   padding: 2rem;
   border-radius: 10px;
   margin-top: 2rem;
-  padding-left: 2%;
-  padding-right: 2%;
+  padding-left: 8%;
+  padding-right: 8%;
 }
 .history-section p {
   line-height: 1.6;
