--- a/src/app/mentors/mentors.css
+++ b/src/app/mentors/mentors.css
@@ -102,7 +102,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 400px;
+    height: auto;
 }
 
 .modal-content img {
