--- a/src/app/newsletter/Newsletter.module.css
+++ b/src/app/newsletter/Newsletter.module.css
@@ -21,8 +21,7 @@
   max-width: 1100px;
   margin: auto;
   text-align: center;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0 2rem;
 }
 
 .title {
