--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -17,6 +17,7 @@ html, body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem 4rem;
+  grid-auto-rows: 1fr;
 }
 
 .card-item {
@@ -25,7 +26,7 @@ html, body {
   padding: 2rem;
   aspect-ratio: 1 / 1;
   width: 400px;
-  height: auto;
+  height: 100%;
 }
 
 h1.text-center, 
